# devexpertai

./: .gitignore  CLAUDE.md  database.py  main.py  models.py  pyproject.toml  start.sh
.claude/: settings.json
.claude/agents/: htmx-fastapi-expert.md  postgresql-expert.md
repositories/: billing_entity.py  campaign.py  internal_user.py  invoice.py  lead.py  partner.py  partner_campaign.py  partner_deal.py  reward.py
routers/: admin.py  billing_entity.py  internal_user.py  invoice.py  lead.py  partner.py  partner_portal.py  reward.py  sales.py  web.py
schemas/: billing_entity.py  campaign.py  internal_user.py  invoice.py  lead.py  partner.py  partner_campaign.py  partner_deal.py  reward.py
seeds/: billing_entities.py  campaigns.py  internal_users.py  invoices.py  partner_deals.py  partner_deals_acme.py  partners.py  rehash_passwords.py  rewards.py  rewards_acme.py
static/css/: base.css  login.css  register.css
static/css/admin/: dashboard.css
static/css/partners/: dashboard.css
templates/: base.html  register.html  register_success.html
templates/admin/: dashboard.html  login.html
templates/admin/partials/: deal_detail.html  deals_section.html  internal_users.html  lead_detail.html  partner_detail.html  partner_edit.html  partner_leads.html  partners.html  partners_dashboard.html  partners_list.html  partners_section.html
templates/partners/: dashboard.html  login.html
templates/partners/partials/: campaign_detail.html  campaigns.html  deal_detail.html  (+6 more)
templates/sales/: dashboard.html  login.html
tests/: conftest.py  test_internal_users.py
(+4 files in other folders)
