[project]
name = "devexpertai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
